[package]
name = "snake"
version = "0.1.0"
authors = ["Tom Rawcliffe <git@tomrawcliffe.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "*"
pistoncore-glutin_window = "*"
piston2d-graphics = "*"
piston2d-opengl_graphics = "*"
rand = "*"
